Introduced API Gateway and Swagger UI